--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: D4N1SH H4CK3R
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: A digital Robin Hood!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars.githubusercontent.com/u/94950692?s=40&v=4
 
 #
 # Flags below are optional
@@ -18,30 +18,31 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: c0nn3ctd4n1shh4ck3r@protonmail.com
+  facebook: https://www.facebook.com/d4n1shh4ck3r/
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
+  github:  d4n1shh4ck3r /
+jekyll-now 
+  instagram: https://www.instagram.com/d4n1shh4ck3r/
+  linkedin: https://www.linkedin.com/in/d4n1shh4ck3r/
   pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  rss: H4CK3R
+  twitter: d4n1shh4ck3r
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: https://www.youtube.com/c/D4N1SHH4CK3R
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus:
+disqus: https://d4n1shh4ck3r.disqus.com
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: 
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://d4n1shh4ck3r.blogspot.com/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
