--- a/_config.yml
+++ b/_config.yml
@@ -1,86 +1,32 @@
-#
-# This file contains configuration flags to customize your site
-#
+title: D4N1SH H4CK3R
+description: "A digital Robin Hood!"
+author: Danish Irfan
+  name: "D4N1SH"
+  email: "c0nn3ctd4n1shh4ck3r@protonmail.com"
+  url: "https://d4n1shh4ck3r.blogspot.com/"
 
-# Name of your site (displayed in the header)
-name: D4N1SH H4CK3R
+baseurl: /
 
-# Short bio or description (displayed in the header)
-description: A digital Robin Hood!
+source: .
+destination: ./_site
+permalink: /:title
+paginate: 3
+paginate_path: /page/:num/
 
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars.githubusercontent.com/u/94950692?s=40&v=4
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
 
-#
-# Flags below are optional
-#
+future: true
+plugins:
+  - jekyll-seo-tag
+  - jekyll-paginate
+  - jekyll-sitemap
 
-# Includes an icon in the footer for each username you enter
-footer-links:
-  dribbble:
-  email: c0nn3ctd4n1shh4ck3r@protonmail.com
-  facebook: https://www.facebook.com/d4n1shh4ck3r/
-  flickr:
-  github:  d4n1shh4ck3r/d4n1shh4ck3r
-  instagram: https://www.instagram.com/d4n1shh4ck3r/
-  linkedin: https://www.linkedin.com/in/d4n1shh4ck3r/
-  pinterest:
-  rss: H4CK3R
-  twitter: d4n1shh4ck3r
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: https://www.youtube.com/c/D4N1SHH4CK3R
-  googleplus: # anything in your profile username that comes after plus.google.com/
-
-
-# Enter your Disqus shortname (not your username) to enable commenting on posts
-# You can find your shortname on the Settings page of your Disqus account
-disqus: https://d4n1shh4ck3r.disqus.com
-
-# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: 
-
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
-url: https://d4n1shh4ck3r.github.io
-
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
-
-#
-# !! You don't need to change any of the configuration flags below !!
-#
-
-permalink: /:title/
-
-# The release of Jekyll Now that you're using
-version: v1.2.0
-
-# Jekyll 3 now only supports Kramdown for Markdown
-kramdown:
-  # Use GitHub flavored markdown, including triple backtick fenced code blocks
-  input: GFM
-  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
-  syntax_highlighter: rouge
-  syntax_highlighter_opts:
-    # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
-
-# Set the Sass partials directory, as we're using @imports
-sass:
-  style: :expanded # You might prefer to minify using :compressed
-
-# Use the following plug-ins
-gems:
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-
-# Exclude these files from your production _site
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE
-  - README.md
-  - CNAME
+# Custom variables
+owner : "D4N1SH"
+year : "2021"
